--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -46,9 +49,10 @@ dependencies {
 
     // Networking stuff
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation "com.squareup.retrofit2:retrofit:2.6.1"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.2.0"
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.2"
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.2'
 
     // UI
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
