--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,7 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    viewBinding {
-        enabled = true
-    }
+    viewBinding.enabled = true
 }
 
 dependencies {
@@ -40,10 +38,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation "androidx.fragment:fragment-ktx:1.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc01"
+    implementation "androidx.fragment:fragment-ktx:1.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02"
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
