--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,20 +28,26 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    androidExtensions {
+        experimental = true
+    }
     viewBinding.enabled = true
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     implementation "androidx.fragment:fragment-ktx:1.2.0-rc02"
+
+    // Lifecycle stuff
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc02"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02"
+
+    // Navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
@@ -57,7 +63,7 @@ dependencies {
 
     // UI
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0-rc01"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "com.google.android.material:material:1.0.0"
     implementation "com.afollestad.material-dialogs:core:3.1.1"
 
@@ -67,4 +73,9 @@ dependencies {
     // Spinkit - loading animations
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // glide for loading images
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
 }
