--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     // UI
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "com.google.android.material:material:1.1.0-alpha04"
     implementation "com.afollestad.material-dialogs:core:3.1.1"
 
     // apache commons
@@ -78,4 +78,9 @@ dependencies {
     // glide for loading images
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
+
+    // image carousel
+    implementation 'com.github.smarteist:autoimageslider:1.3.2'
+
+    implementation 'com.michaelmuenzer.android:ScrollableNumberPicker:0.2.2'
 }
