--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     // UI
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "com.google.android.material:material:1.1.0-alpha04"
+    implementation "com.google.android.material:material:1.2.0-alpha02"
     implementation "com.afollestad.material-dialogs:core:3.1.1"
 
     // apache commons
@@ -82,5 +82,6 @@ dependencies {
     // image carousel
     implementation 'com.github.smarteist:autoimageslider:1.3.2'
 
-    implementation 'com.michaelmuenzer.android:ScrollableNumberPicker:0.2.2'
+    // circleimageview for circular images
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 }
